syntax="proto3";
// root path = .
// protoc -I pkg/pb pkg/pb/*.proto --go_out=. --go-grpc_out=. 
option go_package = "/pkg/pb/navigation_pb";

package navigation_pb;


message Location{
  // @inject_tag: json:"name" form:"name" uri:"name"
  string Name=1;
  // @inject_tag: json:"latitude" form:"latitude" uri:"latitude"
  float Latitude=2;
  // @inject_tag: json:"longitude" form:"longitude" uri:"longitude"
  float Longitude=3;
}

message NavigationRequest {
  // @inject_tag: json:"lat" form:"lat" uri:"lat"
  float Latitude=1;
  // @inject_tag: json:"lng" form:"lng" uri:"lngâ€œ
  float Longitude=2;
}

message NavigationResponse {
  // @inject_tag: json:"location" form:"location"
  repeated Location Location=1;
  // @inject_tag: json:"code" form:"code"" uri:"code""
  int64 Code=2;
}


service NavigationService{
  rpc ShowParkings(NavigationRequest) returns(NavigationResponse);
}